<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
>
    <Spinner
        android:id="@+id/main_sp_shapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shapes"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/main_et_rectangle_hieght"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_rect_hieght"
            android:inputType="textPersonName|numberDecimal" />

        <EditText
            android:id="@+id/main_et_rectangle_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_rect_width"
            android:inputType="textPersonName|numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/main_et_triangle_hieght"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_triangle_hieght"
            android:inputType="textPersonName|numberDecimal" />

        <EditText
            android:id="@+id/main_et_triangle_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_triangle_base"
            android:inputType="textPersonName|numberDecimal" />
    </LinearLayout>

    <EditText
        android:id="@+id/main_et_circle_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_circle_radius"
        android:inputType="textPersonName|numberDecimal" />

    <Button
        android:id="@+id/main_btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

</LinearLayout>